--- a/styles/index.css
+++ b/styles/index.css
@@ -283,6 +283,11 @@ body {
   height: auto;
 }
 
+.page-inner .header__features-item {
+  border-color: rgba(235, 235, 240);
+  color: #292d33;
+}
+
 .slider__buttons {
   display: none;
   height: 44px;
@@ -625,6 +630,10 @@ body.is-lock {
   color: #828a99;
   margin-bottom: 1.7rem;
   word-spacing: 0.125rem;
+}
+
+.founder__text:last-child {
+  margin-bottom: 0;
 }
 
 .clients__wrapper {
@@ -1215,9 +1224,9 @@ body.is-lock {
   margin-bottom: 14.5rem;
 }
 
-.page-inner .production {
+/* .page-inner .production {
   margin-bottom: 6.25rem;
-}
+} */
 
 .seo__title {
   font-family: 'Noto Sans', sans-serif;
@@ -1254,6 +1263,133 @@ body.is-lock {
   color: #292d33;
   margin-bottom: 18px;
   word-spacing: 1.2px;
+}
+
+.experts__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 6.25rem;
+  column-gap: 1rem;
+}
+
+.experts {
+  margin-bottom: 150px;
+}
+
+.experts__title {
+  margin-bottom: 30px;
+}
+
+.experts__content {
+  max-width: 52.5rem;
+}
+
+.experts__text {
+  font-size: 16px;
+  line-height: 1.6;
+  color: #828a99;
+  word-spacing: 2px;
+}
+
+.production {
+  margin-bottom: 9.5rem;
+}
+
+.production__wrapper {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 0.625rem;
+}
+
+.production__content {
+  max-width: 45rem;
+  padding-block-start: 52px;
+}
+
+.production__title {
+  margin-bottom: 30px;
+}
+
+.production__text {
+  font-size: 16px;
+  line-height: 1.6;
+  color: #828a99;
+  margin-bottom: 1.2rem;
+}
+
+.production__text:last-of-type {
+  margin-bottom: 0;
+}
+
+.production__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3, min-content);
+  grid-auto-flow: column;
+  margin-block-start: 1.875rem;
+  row-gap: 22px;
+}
+
+.production__item {
+  display: flex;
+  align-items: center;
+  column-gap: 1.25rem;
+}
+
+.production__item-text {
+  color: #292d33;
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+.research__title {
+  max-width: 37.5rem;
+  margin-bottom: 30px;
+}
+
+.research__content {
+  display: flex;
+  column-gap: 6.25rem;
+  margin-bottom: 52px;
+}
+
+.research__text {
+  max-width: 39.6875rem;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #828a99;
+}
+
+/* дефолтное поведение */
+.swiper {
+  overflow: hidden;
+}
+
+/* внутренние страницы */
+/* .page-inner .swiper__blog {
+width: 100vw;
+
+  overflow: visible;
+} */
+
+/* .page-inner .swiper-wrapper {
+  overflow: visible; 
+}
+} */
+.page-inner .blog-card__footer {
+  justify-content: end;
+}
+
+.page-inner .blog-card__title,
+.page-inner .blog-card__description,
+.page-inner .blog-card::before {
+  visibility: hidden;
+}
+
+.page-inner .clients {
+  margin-bottom: 14.125rem;
 }
 
 @media (max-width: 1700px) {
@@ -1401,6 +1537,20 @@ body.is-lock {
 
   .footer__menu-list {
     column-gap: 4.4rem;
+  }
+
+  .production__image {
+    width: 50%;
+    height: 50%;
+    object-fit: cover;
+  }
+
+  .production__content {
+    padding-block-start: 0;
+  }
+
+  .experts__image {
+    width: 30%;
   }
 }
 
@@ -1601,14 +1751,55 @@ body.is-lock {
     line-height: 1.2;
   }
 
-  .blog-card__description {
-    font-size: 14px;
-  }
-
   .seo__title {
     font-size: 20px;
     line-height: 1.2;
     margin-bottom: 0.625rem;
+  }
+
+  .production__wrapper {
+    flex-direction: column;
+  }
+
+  .experts__wrapper {
+    flex-direction: column;
+    justify-content: space-between;
+    row-gap: 50px;
+    margin-bottom: 4.2rem;
+  }
+
+  .research__text:nth-child(2) {
+    display: none;
+  }
+
+  .production__content {
+    display: contents;
+  }
+
+  .production__image {
+    margin-block-end: 2.25rem;
+    order: -1;
+    align-self: center;
+  }
+
+  .production__title {
+    order: -2;
+  }
+
+  .separator {
+    order: -3;
+  }
+  .blog-card__description,
+  .experts__text,
+  .research__text,
+  .production__item-text,
+  .production__text {
+    font-size: 14px;
+    word-spacing: 1px;
+  }
+
+  .experts__image {
+    width: 50%;
   }
 }
 
@@ -1868,6 +2059,45 @@ body.is-lock {
     margin-bottom: 6px;
     word-spacing: 1.2px;
   }
+
+  .production__wrapper {
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  .experts__title {
+    margin-bottom: 18px;
+  }
+
+  .production__image {
+    width: 100%;
+  }
+
+  .production__title {
+    margin-block-end: 2.9rem;
+  }
+
+  .production__list {
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+    place-items: center;
+  }
+
+  .page-inner .founder {
+    margin-block-end: 11.5rem;
+  }
+
+  .research__title {
+    margin-block-end: 1rem;
+  }
+
+  .research__content {
+    margin-bottom: 28px;
+  }
+
+  .page-inner .clients {
+    margin-bottom: 8.125rem;
+  }
 }
 
 @media (max-width: 576px) {
@@ -2000,7 +2230,7 @@ body.is-lock {
   }
 
   .page-inner .production {
-    margin-bottom: 4.25rem;
+    margin-bottom: 8.25rem;
   }
 
   .page-inner .seo {
@@ -2014,6 +2244,19 @@ body.is-lock {
   .seo__text {
     word-spacing: 1px;
     margin-bottom: 2.3rem;
+  }
+
+  .page-inner .founder__content {
+    padding-block-start: 2.4rem;
+  }
+
+  /*///////////////////////////////////////////////////////////////////////////////*/
+  .experts__image {
+    width: 100%;
+  }
+  .production__list {
+    justify-items: start;
+    row-gap: 16px;
   }
 }
 
