--- a/styles/index.css
+++ b/styles/index.css
@@ -1392,6 +1392,47 @@ width: 100vw;
   margin-bottom: 14.125rem;
 }
 
+.not-found {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-inline: 15px;
+}
+
+.not-found__title {
+  font-family: 'Bebas Neue';
+  font-weight: 400;
+  font-size: 18.75rem;
+  line-height: 1;
+  color: #5c8ee5;
+  margin-block-start: 7.5rem;
+  margin-block-end: 2rem;
+}
+
+.not-found__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #292d33;
+}
+
+.not-found__text--lg {
+  font-size: 28px;
+  margin-block-end: 1.4rem;
+}
+
+.not-found__text--sm {
+  max-width: 30rem;
+  text-align: center;
+  margin-block-end: 1.6rem;
+}
+
+.not-found__button {
+  padding-inline: 3.8rem;
+  margin-block-end: 9.5rem;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 0.875rem;
@@ -2097,6 +2138,31 @@ width: 100vw;
 
   .page-inner .clients {
     margin-bottom: 8.125rem;
+  }
+
+  .not-found__title {
+    margin-block-start: 6.5rem;
+    margin-block-end: 1.5rem;
+    font-size: 200px;
+  }
+
+  .not-found__text {
+    font-size: 14px;
+  }
+  .not-found__text--lg {
+    font-size: 20px;
+  }
+
+  .not-found__text--sm {
+    margin-block-end: 4rem;
+    max-width: 29rem;
+  }
+
+  .not-found__button {
+    width: 100%;
+    margin-block-end: 8rem;
+    font-size: 14px;
+    padding-block: 20px;
   }
 }
 
