--- a/styles/index.css
+++ b/styles/index.css
@@ -1150,14 +1150,16 @@ body.is-lock {
 }
 
 .hero--small {
-  /* padding-block: 3.125rem 0; */
-  padding-block: 0 0;
+  padding-block: 0;
 }
 
 .hero__content {
-  /* padding-block: 3.125rem 0; */
   padding-block: 3.125rem;
 }
+
+/* .hero__content--image {
+
+} */
 
 .hero__image {
   align-self: flex-end;
@@ -1217,6 +1219,7 @@ body.is-lock {
 
 .breadcrumb {
   display: flex;
+  flex-wrap: wrap;
   font-size: 14px;
   color: #828a99;
 }
@@ -1468,14 +1471,19 @@ width: 100vw;
   margin-block-end: 9.5rem;
 }
 
+.autohim-contract {
+  margin-block-end: 9.5rem;
+}
+
 .autohim-contract__content {
-  max-width: 718px;
+  max-width: 44.875rem;
 }
 
 .autohim-contract__wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  column-gap: 20px;
   margin-block-end: 100px;
 }
 
@@ -1497,6 +1505,7 @@ width: 100vw;
 
 .autohim-production {
   position: relative;
+  padding-inline: 0;
   margin-block-end: 12.5rem;
 }
 
@@ -1505,12 +1514,12 @@ width: 100vw;
 }
 
 .autohim-production__content {
-  max-width: 720px;
+  max-width: 45rem;
   padding-block: 3.125rem 3.8rem;
 }
 
 .autohim-production__title {
-  margin-block-end: 2.125rem;
+  margin-block-end: 1.7rem;
 }
 
 .autohim-production__text {
@@ -1545,14 +1554,19 @@ width: 100vw;
 
 .autohim-production__image {
   position: absolute;
-  top: 0;
   right: 0;
   object-fit: contain;
   object-position: left center;
+  top: 50%;
+  transform: translateY(-46%);
 }
 
 .autohim-types {
- margin-block-end: 10.875rem
+  margin-block-end: 10.875rem;
+}
+
+.autohim-types__title {
+  margin-block-end: 1.875rem
 }
 
 .autohim-types__text {
@@ -1614,6 +1628,14 @@ width: 100vw;
     top: 42px;
     right: 30px;
   }
+
+  .autohim-production__image {
+    width: 50%;
+  }
+
+  .hero__image {
+    width: 25%;
+  }
 }
 
 @media (max-width: 1460px) {
@@ -1657,6 +1679,13 @@ width: 100vw;
   .modal__close-button {
     top: 37px;
     right: 28px;
+  }
+
+  .autohim-contract__image {
+    width: 50%;
+  }
+  .autohim-production__content {
+    padding-inline: 15px;
   }
 }
 
@@ -1747,6 +1776,14 @@ width: 100vw;
   }
 
   .experts__image {
+    width: 50%;
+  }
+
+  .autohim-production__content {
+    max-width: 35rem;
+  }
+
+  .hero__image {
     width: 30%;
   }
 }
@@ -1990,13 +2027,54 @@ width: 100vw;
   .experts__text,
   .research__text,
   .production__item-text,
-  .production__text {
+  .production__text,
+  .autohim-contract__text,
+  .autohim-types__item-text,
+  .autohim-production__item-text,
+  .autohim-types__text,
+  .autohim-production__text {
     font-size: 14px;
     word-spacing: 1px;
   }
 
-  .experts__image {
-    width: 50%;
+  .autohim-production__image {
+    width: 40%;
+  }
+
+  .breadcrumb {
+    font-size: 12px;
+  }
+
+  .hero--small {
+    padding-block: 0;
+  }
+
+  .hero__image {
+    display: none;
+  }
+
+  .autohim-contract {
+    margin-block-end: 5.7rem;
+  }
+
+  .autohim-contract__wrapper {
+    margin-block-end: 4rem;
+  }
+
+  .autohim-contract__image {
+    width: 40%;
+  }
+
+  .hero__content--image {
+    padding-block: 4rem 4.5rem;
+  }
+
+  .autohim-contract__title {
+    margin-bottom: 1rem;
+  }
+
+  .autohim-production__title {
+    margin-block-end: 1rem;
   }
 }
 
@@ -2274,6 +2352,10 @@ width: 100vw;
     margin-block-end: 2.9rem;
   }
 
+  .autohim-types__title {
+    margin-block-end: 1rem;
+  }
+
   .production__list {
     grid-template-columns: 1fr;
     grid-auto-flow: row;
@@ -2319,6 +2401,58 @@ width: 100vw;
     margin-block-end: 8rem;
     font-size: 14px;
     padding-block: 20px;
+  }
+
+  .autohim-production__image {
+    position: static;
+    width: 100%;
+    transform: translateY(0);
+  }
+
+  .autohim-production__wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-inline: 15px;
+  }
+
+  .autohim-contract__wrapper {
+    flex-direction: column;
+  }
+
+  .autohim-contract__image {
+    width: 100%;
+    margin-block-end: 30px;
+  }
+
+  .autohim-contract__content {
+    max-width: 35rem;
+  }
+
+  .autohim-production__list {
+    row-gap: 18px;
+  }
+
+  .autohim-types__list {
+    row-gap: 19px;
+  }
+
+  .autohim-types__list,
+  .autohim-production__list {
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+  }
+
+  .autohim-contract__text {
+    margin-bottom: 0.4rem;
+  }
+
+  .autohim-types__text {
+    margin-bottom: 2rem;
+  }
+
+  .autohim-production__content {
+    padding-inline: 0;
   }
 }
 
@@ -2445,10 +2579,6 @@ width: 100vw;
   .footer__menu-list--bold {
     padding-inline-start: 0;
     row-gap: 2.6rem;
-  }
-
-  .breadcrumb {
-    font-size: 12px;
   }
 
   .page-inner .production {
