--- a/styles/index.css
+++ b/styles/index.css
@@ -577,6 +577,9 @@ body.is-lock {
 
 .card__item--brands {
   flex-basis: 50%;
+}
+
+.card__item--brands-link {
   display: grid;
   grid-template-columns: auto 1fr 1fr;
   grid-template-rows: 1fr 2fr;
@@ -585,6 +588,7 @@ body.is-lock {
   grid-template-areas:
     'logo title title'
     'logo text text';
+  text-decoration: none;
 }
 
 .card__logo {
@@ -1608,6 +1612,58 @@ width: 100vw;
   grid-auto-flow: column;
 }
 
+.distributor {
+  position: relative;
+  padding-block: 6.25rem;
+  padding-inline: 0;
+}
+
+.distributor__content {
+  padding-inline: 15px;
+  max-width: 45rem;
+}
+
+.distributor__title {
+  margin-block-end: 1.8rem;
+}
+
+.distributor__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #828a99;
+  margin-block-end: 2.25rem;
+}
+
+.distributor__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-auto-flow: column;
+  row-gap: 1rem;
+  margin-block-end: 3.2rem;
+}
+
+.distributor__item {
+  display: flex;
+  column-gap: 1.25rem;
+  align-items: center;
+}
+
+.distributor__button {
+  display: inline-flex;
+  align-items: center;
+  column-gap: 10px;
+  padding-inline: 62px;
+}
+
+.distributor__image {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 0.875rem;
@@ -1640,6 +1696,10 @@ width: 100vw;
 
   .hero__image {
     width: 25%;
+  }
+
+  .distributor__image {
+    width: 48%;
   }
 }
 
@@ -1790,6 +1850,10 @@ width: 100vw;
 
   .hero__image {
     width: 30%;
+  }
+
+  .distributor__content {
+    max-width: 35rem;
   }
 }
 
@@ -2028,6 +2092,7 @@ width: 100vw;
   .separator {
     order: -3;
   }
+
   .blog-card__description,
   .experts__text,
   .research__text,
@@ -2037,7 +2102,8 @@ width: 100vw;
   .autohim-types__item-text,
   .autohim-production__item-text,
   .autohim-types__text,
-  .autohim-production__text {
+  .autohim-production__text,
+  .distributor__text {
     font-size: 14px;
     word-spacing: 1px;
   }
@@ -2080,6 +2146,12 @@ width: 100vw;
 
   .autohim-production__title {
     margin-block-end: 1rem;
+  }
+
+  .distributor__button {
+    font-weight: 600;
+    font-size: 16px;
+    margin-block-end: 4.5rem;
   }
 }
 
@@ -2458,6 +2530,41 @@ width: 100vw;
 
   .autohim-production__content {
     padding-inline: 0;
+  }
+
+  .distributor {
+    padding-block: 4.25rem 0;
+  }
+
+  .distributor__image {
+    position: static;
+    width: 100%;
+    transform: translateY(0);
+  }
+
+  .distributor__button {
+    width: 100%;
+  }
+
+  .distributor__list {
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+  }
+
+  .autohim-contract--distributor {
+    margin-block-end: 8.7rem;
+  }
+
+  .distributor__title {
+    margin-block-end: 1rem;
+  }
+
+  .distributor__item-text {
+    font-size: 14px;
+  }
+
+  .distributor__list {
+    margin-block-end: 5.2rem;
   }
 }
 
