--- a/styles/index.css
+++ b/styles/index.css
@@ -1318,10 +1318,12 @@ body.is-lock {
   align-items: center;
   margin-bottom: 6.25rem;
   column-gap: 1rem;
+  padding-inline: 15px;
 }
 
 .experts {
   margin-bottom: 150px;
+  padding-inline: 0;
 }
 
 .experts__title {
@@ -1482,6 +1484,7 @@ width: 100vw;
 
 .autohim-contract {
   margin-block-end: 9.5rem;
+  padding-inline: 0;
 }
 
 .autohim-contract__content {
@@ -1494,6 +1497,7 @@ width: 100vw;
   justify-content: space-between;
   column-gap: 20px;
   margin-block-end: 100px;
+  padding-inline: 15px;
 }
 
 .autohim-contract__title {
