again fix nav button

--- a/styles/index.css
+++ b/styles/index.css
@@ -180,8 +180,8 @@ body {
 }
 
 .header__nav-button {
-  /* height: 100%; */
-  height: calc(100% + 2px);
+  height: 100%;
+  /* height: calc(100% + 2px); */
 }
 
 .header__button {
