--- a/styles/index.css
+++ b/styles/index.css
@@ -266,23 +266,18 @@ body {
   line-height: 1.6;
 }
 
-.page-inner {
-  overflow-x: hidden; /* скрываем лишнее */
-  position: relative;
-}
-
-.page-inner .swiper__blog {
-  width: 100vw; /* ширина = ширина экрана */
-  margin-left: 50%;
-  transform: translateX(-50%); /* центрируем */
-}
-
 .swiper {
-  overflow: hidden; /* запрещаем видимость за пределами */
+  max-width: 1440px;
+  margin-inline: auto;
 }
 
-.swiper-wrapper {
-  display: flex;
+.swiper__blog-fullwv {
+  width: 100%; /* занимает всю ширину родителя */
+  max-width: 100%; /* снимает ограничения */
+}
+
+.swiper__blog-slide--full {
+  width: 44.0625rem !important;
 }
 
 .page-inner .blog-card__footer {
@@ -1256,25 +1251,31 @@ body.is-lock {
   color: #828a99;
 }
 
-.breadcrumb__item + .breadcrumb__item:before {
-  content: '—';
-  color: #828a99;
-  margin-inline: 0.75rem;
+.breadcrumb__item {
+  display: inline-flex;
+    white-space: nowrap; 
+    align-items: center;
 }
+
+
 
 .breadcrumb__item--light {
   color: #fff;
 }
 
-.breadcrumb__item--light + .breadcrumb__item--light:before {
-  content: '—';
-  color: #fff;
-  margin-inline: 0.75rem;
-}
-
 .breadcrumb__item:last-child {
   text-decoration: none;
   color: #292d33;
+}
+
+.breadcrumb__item:last-child .breadcrumb__line,
+.breadcrumb__item--light:last-child .breadcrumb__line {
+display: none;
+}
+
+
+.breadcrumb__line {
+  margin-inline: .625rem;
 }
 
 .breadcrumb__link {
@@ -1416,7 +1417,7 @@ body.is-lock {
 }
 
 .research__wrapper {
-  padding-inline: 15px;
+  padding-inline: 0;
 }
 
 .research__title {
@@ -1508,7 +1509,7 @@ body.is-lock {
   justify-content: space-between;
   column-gap: 20px;
   margin-block-end: 100px;
-  padding-inline: 15px;
+  padding-inline: 0;
 }
 
 .autohim-contract__title {
@@ -1644,7 +1645,7 @@ body.is-lock {
 }
 
 .distributor__content {
-  padding-inline: 15px;
+  padding-inline: 0;
   max-width: 45rem;
 }
 
@@ -1946,6 +1947,18 @@ body.is-lock {
   }
   .autohim-production__content {
     padding-inline: 15px;
+  }
+
+  .autohim-contract__wrapper {
+    padding-inline: 15px;
+  }
+
+  .distributor__content {
+     padding-inline: 15px;
+  }
+
+  .research__wrapper {
+     padding-inline: 15px;
   }
 }
 
@@ -2927,6 +2940,7 @@ body.is-lock {
     min-height: 16.1875rem;
     padding: 1.7rem 1.9rem;
   }
+
   .cta__description {
     font-size: 14px;
   }
